Страница каталога LESS

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -37,3 +37,8 @@ body {
 @import "blocks/social.less";
 @import "blocks/copyright.less";
 @import "blocks/modal-order.less";
+
+@import "blocks/catalog.less";
+@import "blocks/catalog-item.less";
+@import "blocks/prodact.less";
+@import "blocks/production-process.less";
