Страница форм LESS

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -42,3 +42,10 @@ body {
 @import "blocks/catalog-item.less";
 @import "blocks/prodact.less";
 @import "blocks/production-process.less";
+
+@import "blocks/order-knitting.less";
+@import "blocks/filter.less";
+@import "blocks/form.less";
+@import "blocks/type.less";
+@import "blocks/color.less";
+@import "blocks/full-name.less";
