Сетки главной страницы

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -17,3 +17,16 @@
   padding-top: 85px;
   .font (17px; 20px; 700)
 }
+
+@media (min-width: @tablet-width) {
+  .advantages {
+    margin: 0 50px;
+  }
+  .advantages__list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .advantages__item {
+    width: 50%;
+  }
+}
