--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,4 +1,18 @@
+.copyright {
+  padding-top: 25px;
+  display: flex;
+  justify-content: space-around;
+}
 .copyright__text {
   .stylenone();
-  .font (19pxe; 18px; 700);
+  .font (19px; 18px; 700);
+  vertical-align: middle;
+}
+
+@media (min-width: @tablet-width) {
+  .copyright {
+  padding-top: 0;
+  display: flex;
+  justify-content: space-between;
+  }
 }
