--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,13 +1,17 @@
+.contacts {
+  display: flex;
+  flex-direction: column;
+  margin-right: 30px;
+  margin-left: 30px;
+}
 .contacts__title {
   .stylenone();
   .font (18px; 30px; 700);
-  .margin();
 }
 
 .contacts__table {
   .stylenone();
   margin-bottom: 40px;
-  .margin();
 }
 
 .contacts__adress {
@@ -24,14 +28,47 @@
 .contacts__adress-name {
   .stylenone();
   .font (15px; 30px; 400);
-  width: 75px;
   vertical-align: top;
   color: @blacklight;
   padding-top: 30px;
 }
+.contacts__map {
+  margin-left: -30px;
+  margin-right: -30px;
+}
 
 .contacts__button {
-  .margin();
   margin-bottom: 40px;
   margin-top: 40px;
+  width: 100%;
+}
+
+@media (min-width: @tablet-width) {
+  .contacts {
+  margin-right: 50px;
+  margin-left: 50px;
+  }
+
+  .contacts__title {
+  .font (43px; 50px; 700);
+  }
+
+  .contacts__table {
+    display: flex;
+    justify-content: space-between;
+  }
+  .contacts__wrapper {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    width: 310px;
+  }
+  .contacts__button {
+    width: 30%;
+    margin-left: 35%;
+  }
+  .contacts__map {
+  margin-left: -50px;
+  margin-right: -50px;
+  }
 }
