--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,3 +1,145 @@
 .page-header {
-  padding-bottom: 20px;
+  .stylenone();
+  padding: 13px 30px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.page-header__logo {
+  padding-left: 40%;
+}
+
+.page-header__list {
+  .stylenone();
+}
+
+.page-header__logo-tablet,
+.page-header__logo-desktop {
+  display: none;
+}
+
+.page-header__toggle {
+
+}
+
+.page-header__toggle--close {
+  display: none;
+}
+
+
+.page-header__site-list {
+  display: none;
+  .stylenone();
+  padding: 25px 30px;
+}
+
+.page-header__link {
+  .font (17px; 24px; 700);
+}
+
+.page-header__link--desktop,
+.page-header__link--tablet {
+  display: none;
+}
+
+@media (min-width: @tablet-width) {
+  .page-header {
+    padding: 10px 50px;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .page-header__logo {
+    order: 0;
+    padding-left: 0;
+  }
+  .page-header__logo-mobile,
+  .page-header__logo-desktop {
+    display: none;
+  }
+  .page-header__logo-tablet {
+    display: block;
+ }
+ .page-header__link--tablet {
+    display: block;
+  }
+  .page-header__toggle {
+    display: none;
+  }
+  .page-header__site-list {
+    display: block;
+    padding-left: 0;
+    padding-bottom: 10px;
+    padding-right: 80;
+  }
+
+  .page-header__site-list--order1 {
+    order: 3;
+  }
+  .page-header__site-list--order2 {
+    order: 4;
+  }
+  .page-header__site-list--order3 {
+    order: 1;
+    padding-left: 100px;
+  }
+  .page-header__site-list--order4 {
+    order: 2;
+  }
+  .page-header__site-list--order7 {
+    order: 5;
+  }
+  .page-header__link--desktop {
+    display: none;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-header {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .page-header__logo-mobile,
+  .page-header__logo-tablet {
+    display: none;
+  }
+  .page-header__logo-desktop {
+    display: block;
+  }
+  .page-header__logo {
+    padding-right: 40px;
+    padding-left: 0;
+    order: 3;
+  }
+  .page-header__site-list {
+    padding-right: 40px;
+    padding-left: 10px;
+  }
+  .page-header__link--desktop,
+  .page-header__link--tablet {
+    display: block;
+  }
+  .page-header__site-list--order1 {
+    order: 0;
+  }
+  .page-header__site-list--order2 {
+    order: 0;
+  }
+  .page-header__site-list--order3 {
+    order: 4;
+  }
+  .page-header__site-list--order4 {
+    order: 5;
+  }
+  .page-header__site-list--order5 {
+    order: 6;
+  }
+  .page-header__site-list--order6 {
+    order: 7;
+    padding-right: 260px;
+  }
+  .page-header__site-list--order7 {
+    order: 8;
+  }
 }
