--- a/source/less/blocks/product-category.less
+++ b/source/less/blocks/product-category.less
@@ -1,8 +1,16 @@
 .product-category__header {
-  background-color: @grey;
+  display: inline-block;
+  background-color: #fafafa;
   background-image: url("../../img/hero-mobile@1x.jpg");
-  background-position: center -20px;
   background-repeat: no-repeat;
+  height: 283px;
+  width: 100%;
+  background-position: 50% 20%;
+  color: black;
+}
+
+.product-category__img {
+  display: none;
 }
 
 .product-category__title {
@@ -19,10 +27,57 @@
 .product-category__text {
   .stylenone();
   .font (19px; 24px; 700);
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
   color: white;
-  padding: 25px 160px 30px 30px;
 }
 
 .product-category__toys {
   background-color: @greendark;
+}
+
+@media (min-width: @tablet-width) {
+  .product-category {
+
+  }
+
+  .product-category__wrapper {
+    display: flex;
+    justify-content: stretch;
+    padding-right: 50px;
+    padding-left: 50px;
+  }
+
+  .product-category__text {
+    width: 150px;
+  }
+
+  .product-category__header {
+    background-image: none;
+    background-color: transparent;
+    height: auto;
+  }
+
+  .product-category__link {
+    flex-grow: 1;
+  }
+  .product-category__img {
+    display: block;
+    position: absolute;
+    top: 80px;
+    z-index: 0;
+    height: 675px;
+    width: 100%;
+    z-index: -1;
+
+    background-image: url("../../img/hero-tablet@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: 50% 40%;
+  }
+  .product-category__title {
+    .font (43px; 50px; 700);
+    padding: 100px 50px 330px 50px;
+
+  }
 }
