--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,3 +1,4 @@
+@import "scaffolding.less";
 @import "variables.less";
 @import "mixins.less";
 @import "blocks/page-header.less";
@@ -23,27 +24,3 @@
 @import "blocks/type.less";
 @import "blocks/color.less";
 @import "blocks/full-name.less";
-
-@font-face {
-  font-family: "Open Sans", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  src: url("../fonts/opensans.woff") format("woff"),
-    url("../fonts/opensans.woff2") format("woff2");
-}
-
-@font-face {
-  font-family: "Open Sans", sans-serif;
-  font-weight: 700;
-  font-style: bold;
-  src: url("../fonts/opensansbold.woff") format("woff"),
-    url("../fonts/opensansbold.woff2") format("woff2");
-}
-
-body {
-  background: #ffffff;
-  font-family: "Open Sans", sans-serif;
-  box-sizing: border-box;
-  width: 320px;
-  margin: 0 auto;
-}
