--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,9 +1,8 @@
 .contacts {
   display: flex;
   flex-direction: column;
-  margin-right: 30px;
-  margin-left: 30px;
 }
+
 .contacts__title {
   .stylenone();
   .font (18px; 30px; 700);
@@ -32,6 +31,7 @@
   color: @blacklight;
   padding-top: 30px;
 }
+
 .contacts__map {
   margin-left: -30px;
   margin-right: -30px;
@@ -45,8 +45,7 @@
 
 @media (min-width: @tablet-width) {
   .contacts {
-  margin-right: 50px;
-  margin-left: 50px;
+
   }
 
   .contacts__title {
@@ -57,18 +56,66 @@
     display: flex;
     justify-content: space-between;
   }
+  .contacts__adress-name {
+    .font (17px; 30px; 400);
+  }
+
   .contacts__wrapper {
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
-    width: 310px;
+    padding-right: 35px;
+    width: 334px;
+    box-sizing: border-box;
   }
+
   .contacts__button {
-    width: 30%;
-    margin-left: 35%;
+    width: 230px;
+    box-sizing: border-box;
+    margin-left: 217px;
+    margin-bottom: 57px;
+    margin-top: 57px;
   }
+
   .contacts__map {
-  margin-left: -50px;
-  margin-right: -50px;
+    margin-left: -50px;
+    margin-right: -50px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .contacts {
+    padding-left: 175px;
+    position: relative;
+    margin-bottom: 100px;
+  }
+
+  .contacts__title {
+  .font (53px; 57px; 700);
+  padding-top: 75px;
+  }
+
+  .contacts__table {
+    display: flex;
+    flex-direction: column;
+    margin-right: 150px;
+    margin-bottom: 85px;
+    margin-top: 20px;
+  }
+
+  .contacts__map {
+    margin: 0;
+    position: absolute;
+    width: 525px;
+    height: 100%;
+    box-sizing: border-box;
+    top: 0;
+    right: 0;
+  }
+
+  .contacts__button {
+    width: 232px;
+    box-sizing: border-box;
+    margin: 0;
   }
 }
