--- a/source/less/scaffolding.less
+++ b/source/less/scaffolding.less
@@ -20,11 +20,11 @@ body {
   background: #ffffff;
   font-family: "Open Sans", sans-serif;
   box-sizing: border-box;
+  margin: 0;
 }
 
 .center-wrapper {
   box-sizing: border-box;
-  margin: 0 auto;
   padding-left: 30px;
   padding-right: 30px;
 }
