--- a/source/less/blocks/product-category.less
+++ b/source/less/blocks/product-category.less
@@ -5,7 +5,7 @@
 }
 .product-category__header {
   background-color: #f9f9f9;
-  background-image: url("../../img/hero-mobile@1x.jpg");
+  background-image: url("../img/hero-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: 50% 20%;
   height: 283px;
@@ -92,7 +92,7 @@
     background-color: #f9f9f9;
 
 
-    background-image: url("../../img/hero-tablet@1x.jpg");
+    background-image: url("../img/hero-tablet@1x.jpg");
     background-repeat: no-repeat;
     background-position: 50% 40%;
   }
@@ -146,7 +146,7 @@
     background-color: #f9f9f9;
 
 
-    background-image: url("../../img/hero-tablet@1x.jpg");
+    background-image: url("../img/hero-tablet@1x.jpg");
     background-repeat: no-repeat;
     background-position: 50% 40%;
   }
