--- a/source/less/scaffolding.less
+++ b/source/less/scaffolding.less
@@ -25,21 +25,21 @@ body {
 
 .center-wrapper {
   box-sizing: border-box;
-  padding-left: 30px;
-  padding-right: 30px;
+  margin-left: 30px;
+  marging-right: 30px;
 }
 
 @media (min-width: @tablet-width) {
   .center-wrapper {
-    padding-left: 50px;
-    padding-right: 50px;
+    margin-left: 50px;
+    margin-right: 50px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .center-wrapper {
-    padding-left: 100px;
-    padding-right: 100px;
+    margin-left: 100px;
+    margin-right: 100px;
   }
 }
 
