Готова страница каталога

--- a/source/less/blocks/catalog-item.less
+++ b/source/less/blocks/catalog-item.less
@@ -1,7 +1,3 @@
-.catalog-item {
-
-}
-
 .catalog-item__list {
   .stylenone();
 }
@@ -76,6 +72,9 @@
 }
 
 @media (min-width: @desktop-width) {
+  .catalog-item {
+    margin-bottom: 55px;
+  }
   .catalog-item__image-tablet {
     display: none;
   }
@@ -87,35 +86,24 @@
   .catalog-item__list {
     display: flex;
     flex-wrap: wrap;
-    margin-right: -52px;
+    margin-right: -51px;
   }
 
   .catalog-item__prodact {
     display: flex;
     flex-direction: column;
     padding: 0;
-    margin-right: 52px;
+    margin-right: 51px;
     width: 316px;
   }
 
-  .catalog-item__title {
-    .font (20px; 24px; 700);
-    padding-left: 25px;
-    padding-top: 25px;
-    padding-bottom: 10px;
-  }
-
   .catalog-item__characteristic {
-    .font (15px; 30px; 400);
-    padding-left: 25px;
-    padding-bottom: 180px;
+    padding-bottom: 40px;
   }
 
   .catalog-item__price {
-    .font (17px; 24px; 700);
-    padding-left: 25px;
-    padding-top: 20;
-    padding-bottom: 20px;
+    padding-top: 25;
+    padding-bottom: 25px;
     padding-right: 160px;
   }
 }
