--- a/source/less/blocks/comments.less
+++ b/source/less/blocks/comments.less
@@ -52,17 +52,24 @@
 
 @media (min-width: @tablet-width) {
   .comments {
+    position: relative;
     padding-top: 83px;
     padding-bottom: 120px;
-    background-image: url(../../img/review@1x.jpg);
+    background-image: url(../img/review@1x.jpg);
     background-repeat: no-repeat;
-    position: relative;
     margin-left: -50px;
   }
 
   .comments__title {
-  .font (43px; 50px; 700);
-  padding-bottom: 63px;
+    .font (43px; 50px; 700);
+    padding-bottom: 63px;
+    padding-left: 50px;
+  }
+
+  .comments__text {
+    .font (17px; 30px; 400);
+    padding-bottom: 65px;
+    padding-left: 50px;
   }
 
   .comments__button {
@@ -75,6 +82,7 @@
   .comments__wrapper {
     display: flex;
     justify-content: space-between;
+    padding-left: 50px;
   }
 }
 
@@ -82,7 +90,7 @@
   .comments {
     padding-top: 83px;
     padding-bottom: 120px;
-    background-image: url(../../img/review@1x.jpg);
+    background-image: url(../img/review@1x.jpg);
     background-repeat: no-repeat;
     position: relative;
     margin-left: 0;
@@ -95,9 +103,9 @@
   }
 
   .comments__text {
-    .font (17px; 30px; 400);
     padding-bottom: 30px;
     padding-right: 90px;
+    padding-left: 0px;
   }
 
   .comments__button {
