--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -29,6 +29,17 @@
 
 @media (min-width: @tablet-width) {
   .footer {
+  margin: 0 -50px;
+  }
+
+  .footer__logo {
+  display: block;
+  padding-left: 50px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .footer {
   margin: 0 -100px;
   }
 
