--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -21,7 +21,7 @@
   width: 22px;
   height: 21px;
 
-  background-image: url("../../img/icon-insta.svg");
+  background-image: url("../img/icon-insta.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
 }
@@ -34,7 +34,7 @@
   width: 22px;
   height: 21px;
 
-  background-image: url("../../img/icon-fb.svg");
+  background-image: url("../img/icon-fb.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
 }
@@ -46,7 +46,7 @@
   width: 22px;
   height: 21px;
 
-  background-image: url("../../img/icon-twitter.svg");
+  background-image: url("../img/icon-twitter.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
 }
