--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -1,5 +1,4 @@
 .form {
-  .margin();
   .font (17px; 18px; 700);
   margin-bottom: 55px;
 }
@@ -8,4 +7,10 @@
   .stylenone();
   .font (14px; 16px; 400);
   margin-bottom: 30px;
+}
+
+@media (min-width: @tablet-width) {
+  .form-notice {
+    order: 2;
+  }
 }
