--- a/source/less/blocks/type.less
+++ b/source/less/blocks/type.less
@@ -2,7 +2,6 @@
   .stylenone();
   padding-top: 20px;
   padding-right: 30px;
-  padding-left: 50px;
 }
 
 .type__name {
@@ -11,4 +10,10 @@
 
 .type__input {
   .stylenone();
+}
+
+@media (min-width: @tablet-width) {
+  .type__item {
+    width: 500px;
+  }
 }
