--- a/source/less/blocks/color.less
+++ b/source/less/blocks/color.less
@@ -1,3 +1,11 @@
 .color__item {
   padding-top: 25px;
 }
+
+@media (min-width: @tablet-width) {
+  .color__item {
+    padding-top: 55px;
+    width: 240px;
+  }
+
+}
