--- a/source/less/blocks/order-knitting.less
+++ b/source/less/blocks/order-knitting.less
@@ -1,5 +1,7 @@
 .order-knitting {
-  margin-bottom: 25px;
+  margin-left: -30px;
+  margin-right: -30px;
+  margin-bottom: 30px;
 }
 
 .order-knitting__fon {
@@ -10,12 +12,67 @@
   .stylenone();
   background-color: @grey;
   padding: 74px 30px;
+  text-align: center;
   .fonttitle();
 }
 
 .order-knitting__text {
   .stylenone();
-  .margin();
   .font (13px; 24px; 400);
   padding-top: 28px;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+@media (min-width: @tablet-width) {
+  .order-knitting {
+    position: relative;
+    background-color: transparent;
+    margin-left: -50px;
+    margin-right: -50px;
+    margin-bottom: 55px;
+  }
+
+  .order-knitting__title {
+    .font (43px; 50px; 700);
+    padding: 0 50px;
+  }
+
+  .order-knitting__text {
+    .font (17px; 24px; 400);
+    padding: 0 50px;
+    padding-top: 170px;
+  }
+
+  .order-knitting__fon {
+    position: absolute;
+    background-color: @grey;
+    width: 100%;
+    height: 230px;
+    top: -110px;
+    z-index: -1;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .order-knitting {
+    margin-left: -100px;
+    margin-right: -100px;
+    margin-top: 30px;
+  }
+
+  .order-knitting__title {
+    .font (53px; 57px; 700);
+    padding: 0 100px;
+  }
+
+  .order-knitting__text {
+    .font (13px; 24px; 400);
+    padding: 0 100px;
+    padding-top: 230px;
+  }
+
+  .order-knitting__fon {
+    height: 256px;
+  }
 }
