Закончила построение сеток, проверила линтером

--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,6 +1,7 @@
 .social {
   border-bottom: 2px solid #e5e5e5;
 }
+
 .social__item {
   .stylenone();
   position: relative;
@@ -16,8 +17,8 @@
 .social__link--instagram::before {
   content: "";
   position: absolute;
-  left: 0px;
-  top: 0px;
+  left: 0;
+  top: 0;
   width: 22px;
   height: 21px;
 
@@ -29,8 +30,8 @@
 .social__link--facebook::before {
   content: "";
   position: absolute;
-  left: 0px;
-  top: 0px;
+  left: 0;
+  top: 0;
   width: 22px;
   height: 21px;
 
@@ -38,11 +39,12 @@
   background-repeat: no-repeat;
   background-position: 0 0;
 }
+
 .social__link--twitter::before {
   content: "";
   position: absolute;
-  left: 0px;
-  top: 0px;
+  left: 0;
+  top: 0;
   width: 22px;
   height: 21px;
 
@@ -53,7 +55,7 @@
 
 @media (min-width: @tablet-width) {
   .social__item {
-  padding-left: 20px;
-  text-align: center;
+    padding-left: 20px;
+    text-align: center;
   }
 }
