--- a/source/less/blocks/comments.less
+++ b/source/less/blocks/comments.less
@@ -55,7 +55,7 @@
     position: relative;
     padding-top: 83px;
     padding-bottom: 120px;
-    background-image: url(../img/review@1x.jpg);
+    background-image: url("../img/review@1x.jpg");
     background-repeat: no-repeat;
     margin-left: -50px;
   }
@@ -90,7 +90,7 @@
   .comments {
     padding-top: 83px;
     padding-bottom: 120px;
-    background-image: url(../img/review@1x.jpg);
+    background-image: url("../img/review@1x.jpg");
     background-repeat: no-repeat;
     position: relative;
     margin-left: 0;
@@ -98,14 +98,14 @@
   }
 
   .comments__title {
-  .font (53px; 57px; 700);
-  padding-bottom: 63px;
+    .font (53px; 57px; 700);
+    padding-bottom: 63px;
   }
 
   .comments__text {
     padding-bottom: 30px;
     padding-right: 90px;
-    padding-left: 0px;
+    padding-left: 0;
   }
 
   .comments__button {
