--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -88,8 +88,8 @@
     order: 5;
   }
 
-  .page-header__link--desktop {
-    display: none;
+  .page-header__link--tablet {
+    display: block;
   }
 }
 
@@ -100,6 +100,10 @@
 
   .page-header__logo-mobile,
   .page-header__logo-tablet {
+    display: none;
+  }
+
+  .page-header__link--tablet {
     display: none;
   }
 
