--- a/source/less/blocks/catalog-item.less
+++ b/source/less/blocks/catalog-item.less
@@ -4,30 +4,37 @@
 
 .catalog-item__prodact {
   .stylenone();
+  margin-bottom: 31px;
+  width: 260px;
+  box-sizing: border-box;
+  border: 1px solid @grey;
 }
 
 .catalog-item__title {
   .stylenone();
   .font (17px; 24px; 700);
   padding-left: 28px;
-  padding-top: 25px;
-  padding-bottom: 10px;
+  padding-top: 24px;
+  padding-bottom: 5px;
 }
 
 .catalog-item__characteristic {
   .stylenone();
   .font (13px; 30px; 400);
-  padding-left: 28px;
-  padding-bottom: 20px;
+  margin-right: 28px;
+  margin-left: 28px;
+  border-bottom: 1px solid @grey;
+  padding-bottom: 19px;
   color: @blacklight;
 }
 
 .catalog-item__price {
   .stylenone();
   .font (15px; 24px; 700);
+
   padding-left: 28px;
   padding-top: 20px;
-  padding-bottom: 30px;
+  padding-bottom: 27px;
 }
 
 .catalog-item__image-desktop,
@@ -87,14 +94,14 @@
   .catalog-item__list {
     display: flex;
     flex-wrap: wrap;
-    margin-right: -51px;
+    margin-right: -50px;
   }
 
   .catalog-item__prodact {
     display: flex;
     flex-direction: column;
     padding: 0;
-    margin-right: 51px;
+    margin-right: 50px;
     width: 316px;
   }
 
