--- a/source/less/blocks/color.less
+++ b/source/less/blocks/color.less
@@ -1,5 +1,10 @@
+.color {
+  padding-bottom: 32px;
+}
 .color__item {
-  padding-top: 25px;
+  padding-top: 35px;
+  padding-bottom: 8px;
+  padding-left: 63px;
 }
 
 @media (min-width: @tablet-width) {
