--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,13 +1,24 @@
 .copyright {
-  padding-top: 25px;
+  position: relative;
+  padding-top: 27px;
+  padding-left: 38px;
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-end;
+  margin: 0 30px;
 }
 
 .copyright__text {
+  position: relative;
   .stylenone();
   .font (19px; 18px; 700);
   vertical-align: middle;
+  padding-right: 95px;
+}
+
+.copyright__link {
+  position: absolute;
+  top: 22px;
+  right: 0;
 }
 
 @media (min-width: @tablet-width) {
