--- a/source/less/blocks/full-name.less
+++ b/source/less/blocks/full-name.less
@@ -1,3 +1,21 @@
+.full-name {
+  padding-top: 9px;
+  margin-bottom: 5px;
+
+}
+
 .full-name__block {
-  padding-top: 25px;
+  padding-top: 21px;
+}
+
+.full-name__title {
+width: 100%;
+}
+
+.full-name__name {
+  width: auto;
+  border: none;
+  padding: 15px 0;
+  border-bottom: 2px solid black;
+  width: 100%;
 }
