--- a/source/less/blocks/product-category.less
+++ b/source/less/blocks/product-category.less
@@ -11,13 +11,13 @@
   background-position: 50% 20%;
   height: 283px;
   width: 100%;
+  border-top: 2px solid @grey;
 }
 
 .product-category__title {
   .stylenone();
   .font (27px; 30px; 700);
-  padding-top: 75px;
-  padding-bottom: 120px;
+  padding: 70px 30px 125px 30px;
   text-align: center;
 }
 
@@ -26,11 +26,11 @@
 }
 
 .product-category__text {
+  width: 130px;
+  box-sizing: border-box;
   .stylenone();
   .font (19px; 24px; 700);
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 20px;
+  padding: 25px 30px 29px 30px;
   color: white;
 }
 
@@ -96,13 +96,13 @@
 
 @media (min-width: @desktop-width) {
   .product-category {
-    margin-right: -100px;
-    margin-left: -100px;
+    margin-right: -50px;
+    margin-left: -50px;
   }
 
   .product-category__wrapper {
-    padding-right: 100px;
-    padding-left: 100px;
+    padding-right: 50px;
+    padding-left: 50px;
   }
 
   .product-category__interior,
