--- a/source/less/blocks/production-process.less
+++ b/source/less/blocks/production-process.less
@@ -1,6 +1,14 @@
+.production-process {
+  width: 260px;
+  box-sizing: border-box;
+  border: 1px solid @grey;
+  margin-bottom: 60px;
+}
+
 .production-process__title {
   .stylenone();
   .font (17px; 24px; 700);
+  padding-top: 20px;
   padding-left: 90px;
   margin-bottom: 25px;
 }
@@ -8,16 +16,18 @@
 .production-process__text {
   .stylenone();
   .font (13px; 24px; 400);
-  padding: 30px 40px 28px 28px;
+  padding: 25px 40px 25px 33px;
   color: @blacklight;
 }
 
 .production-process__button {
-  width: 190px;
+  width: 191px;
+  .font (17px; 17px; 700);
   box-sizing: border-box;
-  margin-left: 34px;
-  margin-right: 34px;
-  margin-bottom: 90px;
+  padding-bottom: 16px;
+  margin-left: 33px;
+  margin-right: 33px;
+  margin-bottom: 32px;
 }
 
 .production-process__img-tablet,
