--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,11 +1,16 @@
 .social {
-  border-bottom: 2px solid #e5e5e5;
+  border-bottom: 1px solid #e5e5e5;
+  margin: 0 30px;
+  padding: 0 40px;
 }
 
 .social__item {
   .stylenone();
   position: relative;
-  padding: 20px;
+  padding-top: 10px;
+  padding-bottom: 40px;
+  padding-right: 10px;
+  padding-left: 10px;
 }
 
 .social__list {
@@ -17,9 +22,9 @@
 .social__link--instagram::before {
   content: "";
   position: absolute;
-  left: 0;
-  top: 0;
-  width: 22px;
+  left: -2px;
+  bottom: 30px;
+  width: 21px;
   height: 21px;
 
   background-image: url("../img/icon-insta.svg");
@@ -31,9 +36,9 @@
   content: "";
   position: absolute;
   left: 0;
-  top: 0;
-  width: 22px;
-  height: 21px;
+  bottom: 30px;
+  width: 14px;
+  height: 27px;
 
   background-image: url("../img/icon-fb.svg");
   background-repeat: no-repeat;
@@ -43,10 +48,10 @@
 .social__link--twitter::before {
   content: "";
   position: absolute;
-  left: 0;
-  top: 0;
-  width: 22px;
-  height: 21px;
+  left: -4px;
+  bottom: 30px;
+  width: 23px;
+  height: 20px;
 
   background-image: url("../img/icon-twitter.svg");
   background-repeat: no-repeat;
