--- a/source/less/blocks/type.less
+++ b/source/less/blocks/type.less
@@ -1,7 +1,12 @@
+.type {
+   padding-top: 8px;
+   padding-bottom: 43px;
+   position: relative;
+}
 .type__item {
   .stylenone();
-  padding-top: 20px;
-  padding-right: 30px;
+  padding-top: 25px;
+  padding-left: 62px;
 }
 
 .type__name {
