--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -1,9 +1,10 @@
 .button {
   text-transform: uppercase;
   .stylenone();
-  .font (17px; 20px; 700);
-  padding: 15px 0;
+  .font (17px; 18px; 700);
+  padding: 14px 0;
   width: 260px;
+  box-sizing: border-box;
   text-align: center;
   border: 2px solid @blacklight;
   background-color: white;
