--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -7,9 +7,10 @@
 
 .catalog__title {
   .stylenone();
-  .fonttitle();
+  .font(27px; 30px; 700);
   text-align: center;
-  padding: 73px 0;
+  padding-top: 69px;
+  padding-bottom: 77px;
 }
 
 @media (min-width: @tablet-width) {
@@ -29,7 +30,8 @@
   .catalog__background {
     position: absolute;
     background-color: @grey;
-    width: 100%;
+    width: auto;
+    box-sizing: border-box;
     height: 230px;
     top: -110px;
     z-index: -1;
@@ -38,8 +40,8 @@
 
 @media (min-width: @desktop-width) {
   .catalog {
-    margin-left: -100px;
-    margin-right: -100px;
+    margin-left: -50px;
+    margin-right: -50px;
     margin-top: 30px;
     margin-bottom: 230px;
   }
