--- a/source/less/blocks/comments.less
+++ b/source/less/blocks/comments.less
@@ -1,18 +1,18 @@
 .comments {
-  padding-top: 30px;
+  padding-top: 27px;
   padding-bottom: 45px;
 }
 
 .comments__title {
   .stylenone();
   .fonttitle();
-  padding-bottom: 30px;
+  padding-bottom: 25px;
 }
 
 .comments__text {
   .stylenone();
   .font (15px; 30px; 400);
-  padding-bottom: 30px;
+  padding-bottom: 23px;
   color: @blacklight;
 }
 
@@ -30,16 +30,19 @@
 
 .comments__button-wrapper {
   display: flex;
-  margin-bottom: 35px;
-  margin-top: 35px;
+  margin-bottom: 37px;
+  margin-top: 30px;
   border: 1px solid @grey;
 }
 
 .comments__prev,
 .comments__next {
+  flex-grow: 1;
+  padding: 10px 0;
   background-color: white;
   border: none;
-  width: 50%;
+  width: 130px;
+  box-sizing: border-box;
 }
 
 .comments__prev {
@@ -47,7 +50,7 @@
 }
 
 .comments__button {
-  width: 100%;
+
 }
 
 @media (min-width: @tablet-width) {
