--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,4 +1,5 @@
 .contacts {
+  padding-top: 42px;
   display: flex;
   flex-direction: column;
 }
@@ -9,19 +10,27 @@
 }
 
 .contacts__table {
+  display: flex;
+  flex-direction: column;
   .stylenone();
   margin-bottom: 40px;
+}
+
+.contacts__wrapper {
+  display: flex;
+  width: 260px;
+  box-sizing: border-box;
 }
 
 .contacts__adress {
   .stylenone();
   .font (15px; 30px; 400);
   color: @blacklight;
-  padding-top: 30px;
+  padding-top: 27px;
 }
 
 .contacts__adress--underline {
-  border-bottom: 2px solid @green;
+  border-bottom: 1px solid @green;
 }
 
 .contacts__adress-name {
@@ -29,7 +38,8 @@
   .font (15px; 30px; 400);
   vertical-align: top;
   color: @blacklight;
-  padding-top: 30px;
+  padding-top: 27px;
+  padding-right: 30px;
 }
 
 .contacts__map {
@@ -38,9 +48,9 @@
 }
 
 .contacts__button {
+  .font (18px; 20px; 700);
   margin-bottom: 40px;
-  margin-top: 40px;
-  width: 100%;
+  margin-top: 35px;
 }
 
 @media (min-width: @tablet-width) {
