--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -1,4 +1,5 @@
 .footer {
+  position: relative;
   background-color: @grey;
   padding-bottom: 30px;
   padding-top: 30px;
@@ -40,7 +41,7 @@
 
 @media (min-width: @desktop-width) {
   .footer {
-    margin: 0 -100px;
+    margin: 0 -50px;
   }
 
   .footer__logo {
