--- a/source/less/blocks/order-knitting.less
+++ b/source/less/blocks/order-knitting.less
@@ -1,7 +1,7 @@
 .order-knitting {
   margin-left: -30px;
   margin-right: -30px;
-  margin-bottom: 30px;
+  margin-bottom: 23px;
 }
 
 .order-knitting__fon {
@@ -11,15 +11,15 @@
 .order-knitting__title {
   .stylenone();
   background-color: @grey;
-  padding: 74px 30px;
+  padding: 70px 30px 75px 30px;
   text-align: center;
-  .fonttitle();
+  .font(27px; 30px; 700);
 }
 
 .order-knitting__text {
   .stylenone();
   .font (13px; 24px; 400);
-  padding-top: 28px;
+  padding-top: 23px;
   padding-left: 30px;
   padding-right: 30px;
 }
@@ -56,8 +56,8 @@
 
 @media (min-width: @desktop-width) {
   .order-knitting {
-    margin-left: -100px;
-    margin-right: -100px;
+    margin-left: -50px;
+    margin-right: -50px;
     margin-top: 30px;
   }
 
