--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,14 +1,14 @@
 .page-header {
+  position: relative;
   .stylenone();
-  padding-top: 20px;
-  padding-bottom: 15px;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+  padding-top: 22px;
+  padding-bottom: 22px;
 }
 
 .page-header__logo {
-  padding-left: 85px;
+  width: 90px;
+  display: flex;
+  margin: 0 auto;
 }
 
 .page-header__list {
@@ -20,14 +20,20 @@
   display: none;
 }
 
-.page-header__toggle--close {
-  display: none;
+.page-header__toggle {
+  position: absolute;
+  top: 31px;
+  right: 0;
 }
 
 .page-header__site-list {
-  display: block;
+  box-sizing: border-box;
+  display: none;
   .stylenone();
-  padding: 25px 30px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  padding-left: 75px;
+  border-bottom: 2px solid @grey;
 }
 
 .page-header__link {
@@ -36,6 +42,12 @@
 
 .page-header__link--desktop,
 .page-header__link--tablet {
+  display: none;
+}
+
+.page-header__site-list--order5,
+.page-header__site-list--order6,
+.page-header__site-list--order7 {
   display: none;
 }
 
