--- a/source/less/blocks/popular-product.less
+++ b/source/less/blocks/popular-product.less
@@ -1,6 +1,6 @@
 .popular-product {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 28px;
+  padding-bottom: 35px;
   display: flex;
   flex-direction: column;
 }
@@ -8,6 +8,7 @@
 .popular-product__header {
   .stylenone();
   .fonttitle();
+  padding-bottom: 5px;
 }
 
 .popular-product__time {
@@ -21,8 +22,8 @@
   .stylenone();
   .font (15px; 24px; 400);
   color: @blacklight;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 24px;
+  padding-bottom: 15px;
 }
 
 .popular-product__property {
@@ -32,8 +33,9 @@
 }
 
 .popular-product__string {
+  .font (15px; 20px; 400);
   border-bottom: 1px solid @grey;
-  padding: 12px 23px 12px 0;
+  padding: 11px 25px 9px 0;
 }
 
 .popular-product__wrapper-img {
@@ -54,13 +56,13 @@
   .stylenone();
   .font (17px; 24px; 700);
   color: @blacklight;
-  padding-top: 25px;
-  padding-bottom: 25px;
+  padding-top: 23px;
+  padding-bottom: 26px;
   text-align: center;
 }
 
 .popular-product__button {
-  width: 100%;
+
 }
 
 @media (min-width: @tablet-width) {
