--- a/source/less/scaffolding.less
+++ b/source/less/scaffolding.less
@@ -20,26 +20,18 @@ body {
   background: #ffffff;
   font-family: "Open Sans", sans-serif;
   box-sizing: border-box;
-  margin: 0;
 }
 
 .center-wrapper {
-  box-sizing: border-box;
-  margin-left: 30px;
-  margin-right: 30px;
+  padding-left: 30px;
+  padding-right: 30px;
+  margin: 0 auto;
 }
 
 @media (min-width: @tablet-width) {
   .center-wrapper {
-    margin-left: 50px;
-    margin-right: 50px;
-  }
-}
-
-@media (min-width: @desktop-width) {
-  .center-wrapper {
-    margin-left: 100px;
-    margin-right: 100px;
+    padding-left: 50px;
+    padding-right: 50px;
   }
 }
 
